--- a/developing mind/chapter_01.tex
+++ b/developing mind/chapter_01.tex
@@ -117,7 +117,7 @@ and we will examine tools philosophers and psychologists have invented in respon
 Puzzling, often apparently contradictory patterns of findings concerning how humans come to know about things such as objects, colours, causes, numbers and the rest matter for two reasons.
 One is that they can advance our understanding of  the origins of knowledge.
 The other is that they show how little is actually understood and how much is yet to be discovered.
-In what follows there is no much by way of answers; the primary aim is just to identify the puzzles.
+In what follows there is not much by way of answers; the primary aim is just to identify the puzzles.
 
 %Focus is on development and origins of knowledge ... but a side-effect will be that we understand representation, perception and knowledge better.
 
