--- a/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
+++ b/intention motor representation goal ascription with corrado sinigaglia (paper 2)/Motor Representation in Goal Ascription.tex
@@ -42,7 +42,6 @@
 
 
 
-
 \begin{abstract}
 \noindent
 %
@@ -69,10 +68,9 @@ Word count: 7 500
 
 
 
-
 \section{Introduction}
 
-Motor representation sometimes occurs in action observation and enables judgements about the goals to which actions are directed (see section \vref{sec:evidence} and \citealp{rizzolatti_functional_2010} for a review). 
+Motor representation sometimes occurs in action observation and facilitates judgements about the goals to which actions are directed (see section \vref{sec:evidence} and \citealp{rizzolatti_functional_2010} for a review). 
 Suppose you observe someone's hand moving towards a pair of scissors. 
 You may judge that she will shortly perform an action directed to cutting something up. 
 Making this judgement may depend on representing the other's actions in motor terms \citep{boria:2009_intention, ortigue:2010_understanding}.  
@@ -97,53 +95,77 @@ This view has implications for understanding how goal ascription relates to mind
 
 ***NOTE: There is not enough about the importance of the question and its wider philosophical significance.
 
+[*rephrase (also introduction): there is evidence that is naturally interpreted as showing that motor representation facilitates judgements about the goals to which actions are directed. But there is also an obstacle to accepting this conclusion: it is unclear how this could occur.  In this paper we aim to remove the obstacle by explaining how motor representation could facilitate judgements about the goals of actions.]
 
-\section{Motor representation enables judgements about the goals to which actions are directed}
+
+\section{Does motor representation sometimes facilitate action judgements?}
 \label{sec:evidence}
-Before launching into the main task for this paper we shall briefly review evidence for our opening premise.
-Why think that motor representation enables judgements about the goals to which actions are directed?
 
-Some evidence for this claim arises from studies of deficits.
-Serino and colleagues (\citeyear{serino:2009_lesions_}) compared the performances of control and hemiplegic subjects who were asked to identify actions from point-light displays. They found that ability to perform an observed action was correlated with ability to recognise that action.  In particular, hemiplegic subjects were less accurate in identifying actions performed with limbs on the hemiplegic side of their bodies than actions performed with limbs on the unaffected side.  Other evidence for a role for motor representation in observation-based judgements of action comes from research on apraxia.  In one study subjects were asked to identify actions such as cutting paper and drinking with a straw on the basis of the sounds these actions produced.  Subjects with limb apraxia showed an impairment in recognising hand-related actions (such as cutting paper) whereas subjects with buccofacial apraxia were impaired in recognising mouth-related actions (such as drinking); but no subjects showed a general impairment in recognising sounds and their significance \citep{pazzaglia:2008_sound_}. This link between motor deficits and action recognition indicates that observation-based action judgements sometimes depend on motor representation.  
+Before launching into the main task for this paper we shall briefly review evidence for our opening premise. Why suppose that motor representation sometimes facilitates judgements about the goals to which actions are directed?
 
-***mention other sources of evidence
+As a preliminary, note that it is now well established that motor processes and representations are involved not only in producing actions but also in observing actions. Indeed there seem to be some striking similarities between the sorts of processes and representations usually involved in performing a particular action and those which typically occur when observing someone else perform that action \citep{rizzolatti_functional_2010,rizzolatti_mirrors_2008}. 
 
-see `How your hands drive my eyes' (but note that our focus is effects \emph{on judgement}):
-\begin{quote}
- `PMv is critically involved in outcome prediction (for a review see Schubotz, 2007). For instance, a fMRI study (Schubotz \& von Cramon, 2004) and lesion (Schubotz, Sakreida, Tittgemeyer, \& von Cramon, 2004) data showed that predictions of outcomes even more abstract than bodily movements recruit the premotor cortex"
-There is evidence that action observation and action execution selectively interact with each other. Brass et al. (Brass, Bekkering, \& Prinz, 2001) instructed participants to execute finger movements in response to observed compatible and incompatible finger movements, and found a reaction time advantage for compatible trials. Similarly, Kilner et al. (Kilner, Paulignan, \& Blakemore, 2003) showed an increased variance in arm movement execution when observing a human model executing a qualitatively different, rather than the same arm movement. This interference effect has been argued to be due to the simultaneous recruitment of the motor representation of both the observed and the executed movements
-There is evidence that action observation may impact on action execution. In particular, people have been shown to be faster in performing fingers movements while observing compatible rather than incompatible finger movements (Brass, et al., 2001). In the same vein, grasping movements are faster when primed by a picture of a compatible rather than incompatible grip postures (Craighero, Bello, Fadiga, \& Rizzolatti, 2002; Craighero, Fadiga, Rizzolatti, \& Umilta, 1999). 
+If motor representations occur in action observation, then observing actions might sometimes facilitate performing compatible actions and interfere with performing incompatible actions.  Both effects do indeed occur, as several studies have shown \citep{brass:2000_compatibility, craighero:2002_hand, kilner:2003_interference, costantini:2012_does}. To give just one example, \citet{kilner:2003_interference} asked subjects to move their arms horizontally while they observed another person moving their arms either horizontally (that is, congruently) or vertically (that is, incongruently). They found that subjects' movements deviated significantly more when observing incongruent actions, and much as they would deviate if the subjects had been required to move their other arm incongruently. The effect cannot be explained as a consequence of observing mere movements because the same effect was not found when subjects observed a robot moving its arm.
 
-`Our findings show that this effect may be related also to the motor representation of action outcome as measured by the gaze behaviour of the observer. Target-specific proactive eye movements have been demonstrated to be driven by the motor representation of an action outcome during both the execution and the observation of a hand action such as a grasping action (Ambrosini, Costantini, et al., 2011; Ambrosini, Sinigaglia, \& Costantini, 2011; Falck-Ytter, 2012; Falck-Ytter, Gredeback, \& von Hofsten, 2006; Flanagan \& Johansson, 2003; Rotman, et al., 2006). The present study indicates that the proactivity of the observer's eye movements significantly decreases when the motor representation of the observed action outcome turns out to be incompatible with the motor representation of the action outcome to be executed.'
-\end{quote}
+Of course the fact that motor representation occurs in action observation does not show, further, that motor representation actually facilitates judgements about the goals to which actions are directed.  
 
-
-
-
-
-\section{Content}
-\label{sec:content}
-
-Our project is to understand how judgements about the goals of actions  could depend on motor representations.  One obstacle to understanding this is an apparent mismatch between what goal ascription requires and what motor representations can capture. To illustrate, let us return to our opening example. Observing someone's hand moving towards a pair of scissors you judge that she will shortly perform an action directed to cutting something.  In making this judgement you are representing an outcome and linking it to an action. How could motor representation enable you to make such a judgement?
-
-[***TODO: write above in terms of Question One (rather than obstacle).]
-
-\subsection{Some motor representations represent outcomes}
-If all motor representations were about merely kinematic or dynamic features of action only, their role in facilitating judgements about outcomes would be mysterious. However some motor representations represent outcomes to which actions are directed, as we shall now argue.  For instance, observing someone's hand moving towards a pair of scissors can involve a motor representation of an outcome such as the cutting of something and not only motor representations of individual joint displacements that might bring about this outcome.  Motor representations can facilitate goal ascriptions in part because some motor representations represent the outcomes which are the goals to be ascribed.  
-
-But how can we distinguish a representation of an outcome from a representation of merely kinematic features of actions?  This is possible because a single outcome can be realised by actions with quite different kinematic features and, conversely, actions with arbitrarily similar kinematic features can realise different outcomes in different contexts.  To illustrate, consider this outcome: the grasping of a particular pen. This could be realised by any of three types of action which vary kinematically: a hand action, a foot action or a tool-using action.  If we had marks we could use to identify motor representations without already knowing their contents, and if we had evidence that these marks were constant across all three types of action, then we could infer that some motor representations capture something more abstract than the kinematic features particular to the hand, foot or tool-using action. But we do have well established marks of motor representation, for motor representation can be inferred from patterns of neuronal discharge, from motor-evoked potentials, from where blood flows in the brain, from behavioural performance profiles and in other ways.  And we do have evidence that such marks are constant across all three actions which realise the grasping outcome \citep{rizzolatti:1988_functional, Rizzolatti:2001ug, cattaneo:2010_state-dependent}. So we can infer that some motor representations do not represent merely kinematic features of actions. To infer, further, that some motor representations represent outcomes we need to consider what happens where, conversely, we hold kinematic features constant while varying to which outcome an action is directed. Take an action which realises the grasping of a particular pen and compare it with a second action which is as similar as possible to the first with respect to its kinematic features but differs with respect to which outcome it is directed to because the pen is manifestly absent (so the action is not plausibly directed to grasping that pen) or because the pen is manifestly too large or too small to grasp.  Some marks of motor representations distinguish these actions \citep{Umilta:2001zr, villiger:2010_activity, koch:2010_resonance}.  This together with the constancy of some motor representations across variations in kinematic features is good (if not conclusive) evidence that some motor representations represent outcomes to which actions are directed.%
+What would count as evidence for this further claim that motor representation can facilitate goal ascription?  One possible source of evidence involves motor expertise. If manipulating subjects' motor expertise can selectively affect their abilities to identify the goals of actions, this would be evidence that motor representation sometimes facilitates goal ascription.  Accordingly, \citet{casile:2006_nonvisual} asked subjects to make judgements about observed actions, including were some that are typically difficult to perform without training.  These actions were presented to subjects as point-light stimuli to ensure that only visual information about the actors' joint displacements was available.%
 \footnote{
-\citet{pacherie:2008_action} and \citet{butterfill:2012_intention} also argue for this conclusion; the latter further support this claim by appeal to the functions of motor processes in planning and monitoring action.
+Readers who unfamiliar with point-light stimuli may view examples at http://www.biomotionlab.ca/Demos/BMLwalker.html.
+The technique was introduced by \citet{johansson:1973_visual}.
+}
+They compared performance before and after subjects were trained to perform those actions themselves. They found that subjects' ability to accurately judge which action was being performed improved with the training. This is plausibly a consequence of increased motor expertise rather than any form of perceptual learning because the subjects were blindfolded during training (and the point-light stimuli on which their judgements were based are, of course, entirely visual). A related way to measure the effects of motor representation on judgements is to temporarily lesion part of the motor cortex using repetitive transcranial magnetic stimulation  \citealp{urgesi:2007_representation, moro:2008_neural}.  \citet{urgesi:2007_representation} measured how long subjects took to make judgements about the type of action they were observing. They found that a temporary lesion to the premotor cortex, but not a temporary lesion to another brain area, increased the time taken to make action judgements. And the effect of lesioning the premotor cortex was specific to action judgements: subjects' abilities to make observational judgements identifying body parts was unaffected. Putting these studies together, we have evidence that enhancing motor representation (through training) sometimes facilitates judgements about the goals of actions, while destroying motor representation even temporarily can impair such judgements.
+
+Further evidence comes from  studies of neurological deficits. If deficits in abilities to perform certain actions specifically impair abilities to make observational judgements about actions of that type, this would also indicate that motor representation can facilitate action judgements.  \citet{serino:2009_lesions_} compared the performances of control and hemiplegic subjects who were asked to identify actions. They found that ability to perform an observed action was correlated with ability to recognise that action. In particular, hemiplegic subjects were less accurate in identifying actions performed with limbs on the hemiplegic side of their bodies than actions performed with limbs on the unaffected side. By contrast, no such pattern was found for control subjects, which included both a group of healthy subjects and also a group of brain-damaged patients with no motor deficit.  (Including the latter group makes it possible to rule out the possibility that the findings were due to a general deficit in higher-order visual processing). Other evidence for a role for motor representation in judgements of action comes from research on apraxia. In one study subjects were asked to identify actions such as cutting paper and drinking with a straw on the basis of the sounds these actions produced. Subjects with limb apraxia showed an impairment in recognising hand-related actions (such as cutting paper) whereas subjects with buccofacial apraxia were impaired in recognising mouth-related actions (such as drinking); but no subjects showed a general impairment in recognising sounds and their significance \citep{pazzaglia:2008_sound_}. These links between motor deficits and action judgements provide further evidence that motor representation sometimes facilitates action judgements.%
+\footnote{
+In addition to facilitating judgements about the goals of observed actions, motor representations and processes may also sometimes facilitate judgements about the possibility of performing an action \citep{grosjean:2007_fitts_law, eskenazi:2009_role}.
 }
 
-Actions are typically directed to many outcomes.  For instance, an action might be directed to grasping the scissors, to cutting a newspaper and to removing a particularly useful article to file later.  In reaching for the scissors the agent is already performing actions directed to all of these outcomes.  Which outcomes can be represented motorically?  Not all outcomes can be represented motorically, of course.  For instance, the difference between cutting out an article and cutting out a picture from newspapers is not as such a difference that need be captured by any motor representations.  One idea about which outcomes can be represented motorically starts from the observation that outcomes can be partially ordered by the means-end relation. It might be assumed that motor representations capture only least outcomes relative to the means-end ordering.  This is wrong, however.  Differences such as that between reaching for a pair of scissors to cut something and reaching for a pair of scissors to place them somewhere (perhaps to put them away) are captured by motor representations (\citealp{Fogassi:2005nf, cattaneo:2007_impairment, bonini:2010_ventral}). This suggests that motor representations are not limited to representing least outcomes.  
+Motor representation may not always be necessary for observational judgements about the goals of actions. Indeed, as \citet{mahon:2008_action} notes, some studies suggest that apraxic subjects can recognise actions they cannot perform \citep[see also][]{hickok:2009_eight}. This is consistent with our premise that motor representation sometimes facilitates judgements about actions.  Even if this facilitation were an extremely rare phenomenon, the question of how it is possible would still arise.
 
 
 
-\subsection{How to capture the directedness of actions to outcomes}
-Our overall question is how motor representation could enable goal ascription judgements. The fact that motor representations can represent outcomes is a step towards answering this question. However we are not yet in a position to answer the question. To see why, consider that someone might (at least in principle) observe an action and represent an outcome without yet relating the outcome to the action. Kate is observing Ludwig kick a ball. Kate has represented this outcome, the ball's being kicked, but she does not represent the outcome as in any way related to Ludwig's action. Rather, she simply finds herself somehow disposed to kick the ball. This is not because she intends to pass the ball back to Ludwig or to compete with him or because of any intention concerning Ludwig: it is just because representing the outcome has suggested to her the possibility of performing this action. So Kate represents the outcome to which Ludwig's action is directed but she does not identify that outcome as a goal to which his action is directed. (She does not relate the outcome to his action at all.)  More would be required for goal ascription. To ascribe a goal to an action involves not only representing the action and the outcome which is the goal but also relating the outcome to the action.
+\section{What can motor representations represent?}
+\label{sec:content}
 
-It is important in what follows that we sometimes represent intentions without linking them to actions.  For instance, you might know that a friend intends to break an egg and see the friend handling an egg which breaks without yet knowing whether this breaking was appropriately related to that intention.  To represent an intention and an action does not necessarily involve representing any relation between the action and the outcome.
+We have just reviewed evidence that judgements about the goals of actions  are sometimes facilitated by motor representation. Our project is to understand how this could happen.  A first step is to understand how the contents of the judgements compare with the contents of motor representations. Where judgements about the goals of actions depend on motor representations, could those motor representations represent outcomes to which the actions are directed?  In this section we argue for a positive answer on the grounds that some motor representations do represent outcomes and that there are processes which ensure that, in observing an action, the outcomes represented motorically are normally outcomes to which the observed action is directed. This will allow us to conclude that motor representations can facilitate judgements about goals in part because some motor representations represent outcomes which are among the goals of the actions.  
+
+We take for granted that action observation sometimes involves motor representations of merely kinematic features of actions.  For example, when observing someone about to press a button, it may be useful to be able to identify with some degree of precision the trajectory her finger will follow and how long it will take to reach the button. In some cases observers represent both features of such actions motorically (*ref). But our concern is with the further claim that some motor representations represent outcomes. 
+
+How can we distinguish a representation of an outcome from a representation of merely kinematic features of actions? This is possible because a single outcome can be realised by actions with quite different kinematic features and, conversely, actions with arbitrarily similar kinematic features can realise different outcomes in different contexts.  To illustrate, consider this outcome: the grasping of a particular pen. This could be realised by any of at least three types of action which vary kinematically: a hand action, a foot action or a tool-using action.  If we had marks we could use to identify motor representations independently of knowing their contents, and if we had evidence that these marks were constant across instances of all three types of action, then we could infer that some motor representations capture something more abstract than the kinematic features particular to the hand, foot or tool-using action. But we do have well established marks of motor representation, for motor representation can be inferred from patterns of neuronal discharge, from motor-evoked potentials, from where blood flows in motor areas of the brain, from behavioural performance profiles and in other ways besides.  And we do have evidence that such marks are constant across instances of all three types of action which realise the grasping outcome \citep{rizzolatti:1988_functional, Rizzolatti:2001ug, cattaneo:2010_state-dependent}. So we can infer that some motor representations do not represent merely kinematic features of actions. To infer, further, that some motor representations represent outcomes we need to consider what happens where, conversely, we hold kinematic features constant while varying to which outcome an action is directed. Take an action which realises the grasping of a particular pen and compare it with a second action which is as similar as possible to the first with respect to its kinematic features but differs with respect to which outcome it is directed to because the pen is manifestly absent (so the action is not plausibly directed to grasping anything) or because the pen is manifestly too large or too small to grasp.  Some marks of motor representations distinguish these actions \citep{Umilta:2001zr, villiger:2010_activity, koch:2010_resonance}.  This together with the constancy of some motor representations across variations in kinematic features is good (if not conclusive) evidence that some motor representations represent outcomes to which actions are directed.%
+\footnote{
+We offer only a brief argument for this conclusion here because \citet{pacherie:2008_action} and \citet{butterfill:2012_intention} also argue for it; the latter further support this conclusion by appeal to the functions of motor processes in planning and monitoring action.
+}
+
+***HERE
+
+So far we have been arguing that some motor representations are about outcomes by contrasting this claim with the hypothesis that motor all representations concern merely kinematic features of action.  [*make more vivid!]  This is not quite enough for a convincing argument because some people have claimed that some motor representations in some way concern sensory consequences of actions.
+To illustrate, grasping a small ball between your finger and thumb will have predictable tactile and visual consequences, and it is possible (at least in principle) that some motor representations involved in grasping the ball might somehow concern these sensory consequences.
+Note that the outcomes to which actions are directed are often distinct from any of the action's sensory consequences.
+Take grasping a ball again: although the outcome---the grasping of the ball---reliably has sensory consequences, these are neither necessary nor sufficient for the outcome to occur.  
+They are not necessary because the grasping could also be performed with a foot or a tool, which could substantially alter the sensory consequences of the action; and because grasping could also in principle occur in complete darkness with numb (or even deafferented) hands. 
+The sensory consequences are also not sufficient because in principle the pattern of movements of finger and thumb in relation to the ball could occur without there being any event directed to the grasping of an object---such movements might in principle occur as part of an exercise in moving one's fingers in which the ball is an unwanted distraction rather than a target.
+So our claim that motor representations represent outcomes is conceptually quite distinct from the claim that some motor representations in some way concern sensory consequences of actions: in principle, both claims might be true, or one might be true while the other is false.
+
+Suppose, at least for the sake of argument, that some motor representations do indeed somehow concern sensory consequences of actions. 
+Does we still have grounds for holding that there are motor representations of outcomes?  Yes.  We noted just above that it is possible to vary the sensory consequences of an action while holding one of its outcomes constant.  
+To return to the example, grasping a ball can be done with a hand, a foot or a tool.
+Using different effectors will alter how the action looks (its visual consequences) but not the goal to which it is directed. 
+So the fact that observing instances of all three types of action can involve a common motor representation shows that not all motor representations can concern sensory consequences and merely kinematic features only.
+
+***The claim that some motor representations represent outcomes raises two further questions.  First, which outcomes can be represented motorically?  And, second, what (if anything) ensures that an outcome represented motorically in action observation is an outcome to which the observed action is directed?
+
+Actions are typically directed to many outcomes.  For instance, a single action might be directed to grasping the scissors, to cutting a newspaper and to removing a particularly useful article to file later.  In reaching for the scissors the agent is already performing actions directed to all of these outcomes.  Which outcomes can be represented motorically?  Not all outcomes can be represented motorically, of course.  For instance, the difference between cutting out an article and cutting out a picture from a newspaper is not a difference that need be captured by any motor representations.  One idea about which outcomes can be represented motorically starts from the observation that outcomes can be partially ordered by the means-end relation. It might be assumed that motor representations capture only least outcomes relative to the means-end ordering.  This is wrong, however.  Differences such as that between reaching for a pair of scissors to cut something and reaching for a pair of scissors to place them somewhere (perhaps to put them away) are captured by motor representations (\citealp{Fogassi:2005nf, cattaneo:2007_impairment, bonini:2010_ventral}). This suggests that motor representations are not limited to representing least outcomes.  
+
+
+  
+[*So the plan is to end this section after arguing that mr don't represent directedness, and then have a new section break on 'Capturing without representing'.  The Q. for that section might be: What sort of process links the outcome represented to the observed action and ensures that the outcome represented is one to which the action is directed?]
+
+
+\subsection{Directedness}
+Our overall question is how motor representation could enable goal ascription judgements. The fact that motor representations can represent outcomes is a step towards answering this question. However we are not yet in a position to answer it. To see why, consider that someone might (at least in principle) observe an action and represent an outcome without yet relating the outcome to the action. Kate is observing Ludwig kick a ball. Kate has represented this outcome, the ball's being kicked, but she does not represent the outcome as in any way related to Ludwig's action. Rather, she simply finds herself somehow disposed to kick the ball. This is not because she intends to pass the ball back to Ludwig or to compete with him or because of any intention concerning Ludwig: it is just because representing the outcome has suggested to her the possibility of performing this action. So Kate represents the outcome to which Ludwig's action is directed but she does not identify that outcome as a goal to which his action is directed. (She does not relate the outcome to his action at all.)  More would be required for goal ascription. To ascribe a goal to an action involves not only representing the action and the outcome which is the goal but also relating the outcome to the action.
+
+It is important in what follows that we sometimes represent intentions without linking them to actions.  For instance, you might know that a friend intends to break an egg and see the friend handling an egg which breaks without yet knowing whether this breaking was appropriately related to that intention.  To represent an intention and an action does not necessarily involve representing any relation between the action and the intention.
 
 How might the directedness of actions to outcomes be represented or otherwise captured? In philosophy the notion of goal-directedness is standardly explained in terms of intention: for an action to be directed to a outcome is for the action to be appropriately related to an intention whose content specifies that outcome (or, on some views, an intention specifying an appropriately related outcome). Given this, it is perhaps natural to suppose that ascribing a particular goal to a given action might involve representing that action, representing an intention whose content specifies the goal, and representing the action as appropriately related to the intention.  If so, motor representation could have at most a limited role in goal ascription.  After all, no motor representation represents an intention.
 
@@ -153,7 +175,7 @@ One way to avoid our argument for this conclusion would be to claim that the dir
 
 At this point it seems to us plausible that motor representations cannot represent the directedness of an action to an outcome. If we supposed that all goal ascription involved representing directedness, it would be hard to understand the role of motor representation in enabling goal ascription.  But it would be a mistake to suppose that directedness must be represented in goal ascription.  There are ways of capturing directedness which do not involve representing it.  In the rest of this section we shall argue that in goal ascription the link between actions and outcomes to which they are directed can be captured not only by representing it but alternatively by a planning-like process which involves determining how an outcome is to be achieved and whether given movements are appropriate to achieving that outcome.  
 
-To see how the directedness of an action to an outcome can be captured without being represented, let us first step back to consider cases of goal ascription which involve representing intentions only (so motor representation is not yet in the picture).  Observing Ayesha gathering some papers during a long meeting that shows no sign of ending, you conjecture that she is intending to leave discretely. You use this conjecture about Ayesha's intention to determine one or more likely sequences of behaviours, almost as if you were planning from her point of view how to act on that intention. This leaves you with expectations concerning how she will act. You might be waiting for Ayesha, who has no other friends present, to give you a nod before quietly pushing away from the table. If what you observe matches these expectations, or if there are only deviations that can be explained in ways consistent with your conjecture about Ayesha's intention, then you may come to regard the conjecture as confirmed.  But if there is a mismatch---if, for example, Ayesha signals that she wants attention and looks around to see whether people are looking at her---then you might reject the conjecture about her intention to leave discretely. As this illustrates, goal ascription often (perhaps not always) involves determining how an action will or would unfold, and this process of determination may ensure that there is a reliable connection between the action's being directed to a certain goal and your ascribing that goal to the action.  So the directedness of an action to a goal can be captured by a planning-like process in addition to being represented.
+To see how the directedness of an action to an outcome can be captured without being represented, let us first step back to consider cases of goal ascription which involve representing intentions only (so motor representation is not yet in the picture). Observing Ayesha gathering some papers during a long meeting that shows no sign of ending, you conjecture that she is intending to leave discretely. You use this conjecture about Ayesha's intention to determine one or more likely sequences of behaviours, almost as if you were planning from her point of view how to act on that intention. This leaves you with expectations concerning how she will act. You might be waiting for Ayesha, who has no other friends present, to give you a nod before quietly pushing away from the table. If what you observe matches these expectations, or if there are only deviations that can be explained in ways consistent with your conjecture about Ayesha's intention, then you may come to regard the conjecture as confirmed. But if there is a mismatch---if, for example, Ayesha signals that she wants attention and looks around to see whether people are looking at her---then you might reject the conjecture about her intention to leave discretely. As this illustrates, goal ascription often (perhaps not always) involves determining how an action will or would unfold, and this process of determination may ensure that there is a reliable connection between the action's being directed to a certain goal and your ascribing that goal to the action. So the directedness of an action to a goal can be captured by a planning-like process in addition to being represented.
 
 You might suggest that where an observer represents another agent's intention, she would only ever determine how the agent will act if she also supposes the actions will be directed to fulfilling this intention.  This may be right.  The illustration is only supposed to show that goal-directedness could in principle be captured without being represented.
 
@@ -218,7 +240,7 @@ How is anosognosia for hemiplegia relevant to the issue of whether there are exp
 
 This view is further supported by research on deafferented subjects.  These subjects lack tactile and proprioceptive sensory feedback from their actions but, unlike subjects with anosognosia for hemiplegia, can actually move their limbs.  Such subjects may continue to have some experiences characteristic of action; for instance, when asked to flex an index finger they can report having done so even in the absence of visual information \citep{kristeva:2006}.  These subjects' sensory deficits make it unlikely that their experiences could be of movements or the like: it is more plausible that, concerning acting, their experiences are like those of subjects with anosognosia for hemiplegia.  None experience movement: what they experience is action.
 
-Anosognosia and deafference comprise a useful pair of cases: in anosognosia we have preserved perceptual senses and an absence of actual bodily movement, whereas in deafference we have damaged senses and actual bodily movement.  But in both cases there are experiences revelatory of action.  The existence of these disorders indicates that motor representation is sufficient for experiences capable of grounding judgements about actions even in the absence of any perceptual experiences of movements, sounds or the like.  It is plausible to infer that these experiences are experiences of action as such.
+Anosognosia and deafference comprise a useful pair of cases: some anosognosics we have preserved perceptual senses and an absence of actual bodily movement, whereas individuals suffering deafference have damaged senses and actual bodily movement.  But in both cases there are experiences revelatory of action.  The existence of these disorders indicates that motor representation is sufficient for experiences capable of grounding judgements about actions even in the absence of any perceptual experiences of movements, sounds or the like.  It is plausible to infer that these experiences are experiences of action as such.
 
 ***HERE: todo.  Two things.  First, explain the timing experiment---it's not all about subjects with brain damage, there is converging evidence from ordinary subjects.  Second, explain the comparitor model.  
 
@@ -277,6 +299,9 @@ MR----> | acquisition| Action Judgment (action concept) <----> B \& D Judgment (
 tracking goal -----> || ascribing goal <----------------- > ascribing beliefs and desires
 
 MR<----> Action Judgment (action concept) <----> B \& D Judgment (b\&d concept)
+
+
+
 
 
 
