--- a/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
+++ b/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
@@ -13,7 +13,7 @@
 \def \iemail{s.butterfill@warwick.ac.uk}
 %\date{}
 
-\input{$HOME/Documents/submissions/preamble_steve_paper2}
+\input{$HOME/Documents/submissions/preamble_steve_paper3}
 %\author{}
 %\date{}
 
@@ -33,6 +33,20 @@
 \noindent
 On the assumption that motor representation plays a role in explaining how effective joint action is possible, do we also need motor representation to explain what joint action is? Philosophers tend to assume that motor representation is only an enabling condition for joint action and of no direct interest to narrowly philosophical theories of joint action and shared intention. In this talk I shall argue that social motor representation and shared intention have distinctive roles in explaining the purposiveness of joint action. This gives rise to a challenge. On the one hand, effective joint action—imagine two people erecting a tent in a gale together—sometimes requires both shared intentions and social motor representations plus a certain kind of harmony between the two. On the other hand, recognizing their distinctive roles precludes the existence of direct inferential links between shared intentions and social motor representations. The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective joint action despite the lack of inferential integration. 
 \end{abstract}
+
+\section{***REFRAME***}
+Shouldn't start with the question, Which events are joint actions?  Instead: either it's about making sense of purposive joint action, or else it's the question about the relation between purposive joint actions and the goals to which they are directed.
+(Was just trying to make it sound more important by asking Which events are joint actions.  But I don't think this question bears any weight.)
+
+
+\section{***EVIDENCE***}
+I now think three bits of evidence are relevant:
+\begin{enumerate}
+\item The GROOP effect shows that there are representations which specify each agent's task in relation to the other (so they are not simple representing the outcomes to which each of their actions are directed; they are representing an outcome to which their actions taken together are directed.)
+\item \citet{kourtis:2012_predictive} shows that motor planning can occur for others' actions when we are engaged in joint action with them.
+\item Vesper's ESPP paper (on jumping together and imagining jumping together --- jumping is published \citep{vesper:2012_jumping}, imagining jumping is about to be submitted (as of August 2012).  This shows that individuals are capable of running motor simulations of multiple roughly simultaneous actions.
+\end{enumerate}
+
 
 \section{Introduction}
 Which events are joint actions?
@@ -97,11 +111,11 @@ then it seems reasonable to suppose that for an event to be a joint action is fo
 
 
 \subsection{My view}
-On the second consideration, 
-we take for granted that there is a parallel between joint action and ordinary, individual action.
-But is the standard view about the relation between action and intention correct? 
+Let us focus on the second consideration, 
+which hinges on  a parallel between joint action and ordinary, individual action.
+We take for granted that the parallel obtains but we do not accept the view about ordinary, individual action.
 
-Not everyone accepts the standard view.
+Not everyone accepts that for an event to be an action is for it to be appropriately related to an intention.
 Some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
 For instance, Michael Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' \citet[p.\ 251]{bratman:2000_valuing}.%
 %\footnote{
@@ -126,6 +140,7 @@ In fact recognising that motor representation is needed to say which events are 
 
 
 \section{Intention and Motor Representation}
+\label{sec:individual_action_motor_representation}
 [\emph{*Probably skip all of this section in the talk}]
 
 So that you can see where this is going, let me briefly explain what stands behind the view that motor representation is needed in addition to intention in saying which events are actions.
@@ -160,10 +175,16 @@ It is the fact that this outcome is represented by the intention.
 So the intention is what binds component actions together into purposive actions and links the action taken as a whole to the outcomes to which they are directed.
 
 Motor representations are relevantly similar to intentions,
-as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
+as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).%
+\footnote{
 Of course motor representations differ from intentions in some important ways (as these authors note).
 But they are similar in the respects that matter for explaining the purposiveness of action.
-For, like intentions, some motor representations represent outcomes and not merely kinematic features of action.
+}
+A \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.
+We follow several psychologists and philosophers in supposing that motor representations feature in planning and monitoring action \citep[e.g.]{wolpert:1995internal, miall:1996_forward}.
+
+How do motor representations resemble intentions?
+First, like intentions, some motor representations represent outcomes and not merely kinematic features of action.
 Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
 And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
 So anyone who accepts the standard story about purposive action and intention
@@ -176,18 +197,18 @@ In some cases what binds together purposive actions and links them to outcomes a
 %In some cases, the purposiveness of an action is grounded in a motor representation of an outcome; in other cases it is grounded in an intention.
 And of course in many cases it may be that both intention and motor representation are involved.
 
-This is one reason for supposing that motor representation is not merely an enabling condition for ordinary, individual action but also plays a role in explaining what action is (just as intention does).
-Now let’s return to joint action.
-
+This is one reason for supposing that motor representation is not merely an enabling condition for ordinary, individual action but also plays a role in explaining which events are actions (and plays a role resembling that of intention).
+Now let's return to joint action.
+%Suppose that the purposiveness of some actions really is grounded in motor representation in the way just described.
+Could there be a parallel role for motor representation in explaining which events are joint actions? 
 
 
 \section{Social motor representation}
 We start from the premise that some joint actions are facilitated by reciprocal, agent-neutral motor representations of outcomes whose obtaining would normally involve action on the part of each agent.
 
 This needs unpacking. 
-A \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.
-We follow several psychologists and philosophers in supposing that motor representations feature in planning and monitoring action \citep[e.g.]{wolpert:1995internal, miall:1996_forward}.
-One consequence is that motor representations are not concerned with merely kinematic or dynamic features of actions only.
+As already mentioned, a \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.
+To repeat, motor representations are not concerned with merely kinematic or dynamic features of actions only.
 Rather, some motor representations represent outcomes, such as the movement of a target object from one place to another.
 
 A representation (motor or not) is \emph{agent-neutral} if its content does not specify any agent or agents.%
@@ -211,7 +232,7 @@ It may be important that our view is consistent with the possibility that recipr
 
 Two or more agents have \emph{reciprocal} motor representations  just if there is a single outcome and each agent has a motor representation of that outcome. 
 It is hardly controversial that reciprocal motor representations exist, for their existence is suggested by by a large body of research on motor cognition in action observation.
-What is much more controversial is that reciprocal motor representation occurs in joint action.
+It is more controversial that reciprocal motor representation occurs in joint action.
 Some of the research that Gunether Knoblich presented supports the claim that there are reciprocal motor representations in joint action, and he suggests that these enable joint action.%
 \footnote{
 See \citet{kourtis:2012_predictive}: `the partner’s expected action is simulated at the motor level, which probably facilitates effective performance of the joint action.'
@@ -220,7 +241,7 @@ reciprocal motor representation is more likely to occur in joint action than is 
 See also \citet{Knoblich:2003nf}.
  }
 
-I want to go a tiny step further and suggest that in joint action there are sometimes reciprocal, agent-neutral representations of outcomes whose obtaining would normally involve action on the part of all of the agents.
+I want to go a tiny step further and suggest that in joint action there are sometimes reciprocal, agent-neutral representations of outcomes whose obtaining would normally involve action on the part of each of the agents.
 So when we act together, some of my motor representations may concern outcomes that are partly but not entirely to be realised by my actions.
 For example, suppose our task is to move an object from A to B, where you pick it up and pass it to me so that I can then place it.
 In this case I may represent the movement of the object from A to B and not only the component movements.
@@ -232,7 +253,7 @@ We shall use the term \emph{social} motor representation as an abbreviation for 
 (Of course we cannot assume in advance of argument that such reciprocal, agent-neutral motor representations are social in any interesting sense;
 but we are using the term `social' in a non-standard way as an abbreviation, one that reflects our aim.)
 
-What follows is speculative philosophy: we take for granted that sometimes social motor representation facilitates joint action and ask whether this conjecture bears on our question about which events are joint actions.
+What follows is speculative philosophy: we take for granted that  social motor representation sometimes facilitates joint action and ask whether this conjecture bears on our question about which events are joint actions.
 
 
 \section{How could social motor representation facilitate joint action?}
@@ -249,7 +270,7 @@ We can capture this by supposing that
 motor representations for planning and monitoring action involve a hierarchical structure of representations.
 At the top we might find a relatively abstract representation of an outcome, in this case of the movement of the object from one location to another.
 Action-relevant details are progressively filled in by representations at lower stages of the hierarchy. 
-Now in the action we are considering there is a need, even for the single agent, to coordinate the exchange between the two hands.
+Now in the action we are considering there is a need, even for the single agent, to coordinate the exchange between her two hands.
 How is this achieved? 
 We suppose that part of the answer involves the fact that planning for the movements of each hand is not done entirely independently.
 Rather there is a plan for the whole action
@@ -261,7 +282,7 @@ How is this relevant to the case of joint action?
 In joint action the agents have the same goal, to move the object from one place to another.
 They also face a similar coordination problem, requiring a precisely timed swap from one hand to another.
 Now suppose, 
-inspired by Koutis et al’s and others' findings,
+inspired by \citet{kourtis:2010_favoritism,kourtis:2012_predictive} and other findings mentioned above,
 that the same planning is involved in the individual case (where one agent performs the whole action) and in the joint action case (where the action is distributed between two agents).
 The planning is the same almost up to the actual muscle contractions.
 
@@ -270,7 +291,7 @@ Suppose the agents' planning processes are similar enough that, for a given cont
 Then having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
 (ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action,
 and 
-(iii) each  agent's plans for their own action are constrained by their plans for the other agent's action.
+(iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
 
 So what enables the two agents' plans to mesh is not that they represent each other's plans but more simply that they plan each other's actions as well as their own actions as if they were each about to do the whole thing themselves.
 
@@ -287,16 +308,14 @@ So what is the difference between the individual and the joint case?  From the p
 
 \section{Grounding the purposiveness of joint action}
 So far we have only been considering a possible role for social motor representation in facilitating joint action.  
-Our primary concern, though, is with what joint action is.
+How does any of this bear on our main question about which events are joint actions?
 The details of how 
 social motor representation enables joint action
  already give us grounds for holding that motor representation has a role to play in explaining which events are joint actions.
 To see why,
 let’s go back to individual action for a moment again.
 
-[***moved to earlier]
-
-The same two questions we asked about ordinary, individual action also arise for joint action.
+Earlier, in section \vref{sec:individual_action_motor_representation}, we asked two questions we asked about ordinary, individual action; the same two questions also arise for joint action.
 %What is the relation between a purposive joint action and the outcome or outcomes to which it is directed?
 What singles out the outcome or outcomes to which a purposive joint action is directed?
 And what binds together the various activities (of several agents) that make up the joint action?
