--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -39,6 +39,11 @@ Philosophers tend to assume that motor representation is only an enabling condit
 and we argue that social motor representation and shared intention  have distinctive roles in explaining the purposiveness of joint action.  This gives rise to a challenge.  On the one hand, effective joint action---imagine two people erecting a tent in a gale together---sometimes requires both shared intentions and social motor representations plus a certain kind of harmony between the two.  On the other hand, recognizing their distinctive roles precludes the existence of direct inferential links between shared intentions and social motor representations.  The challenge is to explain how these two kinds of representation could sometimes harmoniously contribute to effective joint action despite the lack of inferential integration.
 \end{abstract}
 
+\section{***NB***}
+Collective Intentionality (Manchester) version has some refinements and makes a new start.
+
+Budapest Philosophy is more recent still, and sets it up better
+
 \section{Introduction}
 Which events are joint actions?
 We shall argue that fully answering this question involves appeal to structures of motor representation.
