--- a/joint action and knowing others minds/interacting mindreaders.3.ps.corrections.tex
+++ b/joint action and knowing others minds/interacting mindreaders.3.ps.corrections.tex
@@ -118,7 +118,10 @@ a purely passive mindreader observing from behind a one-way mirror
 is on a par with
 a mindreader who, actually or apparently, could interact with those she seeks to interpret.
 The two are on a par in this sense:
-in principle the same evidence could be available to each, and each can exploit the routes to knowledge in moving from evidence to ascriptions of thought and action.
+in principle the same evidence could be available to each, and each can exploit the 
+%correction! ***
+same 
+routes to knowledge in moving from evidence to ascriptions of thought and action.
 Of course these theories are all compatible with the idea that interaction might be useful for mindreading in practice.  
 But on these theories interaction makes no difference to what can in principle be known.
 In this paper we aim to show
@@ -827,7 +830,7 @@ Call this inference \emph{your-goal-is-my-goal}.
 To say that it characterises a route to knowledge implies two things.  
 First, in some cases it is possible to know the premises, 1–2, without already knowing the conclusion, 3.  
 Second, in some of those cases knowing the premises would put one in a position to know the conclusion.  
-We shall consider these points in turn
+We shall consider these points in turn. %correction! (the period) ***
 
 
 Is it ever possible to know the premises without first knowing the conclusion?  
