--- a/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
+++ b/mindreading/minimal theory of mind (new version)/minimal theory of mind.nv.tex
@@ -164,7 +164,7 @@ But there is also a body of evidence supporting a different conclusion.
 This suggests that, at least in adults, belief tracking is not automatic.
 There is also evidence that, even in relatively simple situations, 
 using facts about others' beliefs is not automatic \citep{Keysar:2003xu,apperly:2010_limits}.
-The case for nonautomaticity is indirectly supported by evidence that tracking perceptions and beliefs---and even merely holding in mind what another believes, where no inference is required---involves a measurable processing cost  \citep{apperly:2008_back,apperly:2010_limits}, consumes attention and working memory in fully competent adults (\citealp{en_1698, lin:2010_reflexively, en_1547} experiments 4-5), may require inhibition \citep{bull:2008_role} and makes demands on executive function \citep{apperly:2004_frontal,samson:2005_seeing}.
+The case for nonautomaticity is indirectly supported by evidence that tracking perceptions and beliefs---and even merely holding in mind what another believes, where no inference is required---involves a measurable processing cost  \citep{apperly:2008_back,apperly:2010_limits}, consumes attention and working memory in fully competent adults (\citealp{Apperly:2009cc, lin:2010_reflexively, McKinnon:2007rr} experiments 4-5), may require inhibition \citep{bull:2008_role} and makes demands on executive function \citep{apperly:2004_frontal,samson:2005_seeing}.
 These findings, taken together, suggest that tracking others' perceptions and beliefs is sometimes not automatic.
 
 The question was whether, in adult humans,  tracking perception and belief is automatic.  
@@ -482,7 +482,7 @@ Applications of the fourth principle therefore include Onishi and Baillargeon’
 \subsection{Extensions and variations}
 With the fourth principle we have completed the construction of a minimal theory of mind capable of underwriting success on some false belief tasks.  
 We stop here because false belief tasks are often taken to be an acid test for theory of mind.
-But of course additonal principles can be added accommodate further theory of mind abilities.  
+But of course additional principles can be added accommodate further theory of mind abilities.  
 For instance, further principles might extend the definition of registration.  
 Registration was been defined as a relation between agents, objects and locations. 
 This definition could be extended to include  other types of property as relata in addition to locations.  
